syntax = "proto3";
package Message;

message HWPlayerOnlineAsk  // IRequest 玩家上线
{
  uint64 uid = 1;
  int64 loginTime = 2;
}
message WHPlayerOnlineAns {}  // IResponse

message HWPlayerOfflineAsk {  // IRequest
  uint64 uid = 1;
  int64 offlineTime = 2;
}
message WHPlayerOfflineAns {}  // IResponse 玩家下线
